<resources>
    <string name="app_name">金山云播放Demo</string>
    <string name="network">网络</string>
    <string name="history">历史</string>
    <string name="setting">设置</string>
    <string name="load_more">正在加载</string>

    <string name="ksyun_name">金山云</string>

    <string name="ksyun_introduction_1">金山视频云依托业界领先的编解码技术与强大的分发服务，立足于金山云顶级的IaaS基础设施，提供一站式云直、点播服务。</string>
    <string name="ksyun_introduction_2">金山视频云提供内容生产及观看的工具，即推流播放SDK，凭借其完善的功能、卓越的兼容性及性能，满足客户不断涌现的业务需求，再通过金山魔方系统与第三方平台共同实现视频生态链的繁荣。</string>
    <string name="ksyun_introduction_3">金山云推流SDK支持H.264/H.265编码、软硬编，支持多种美颜滤镜特效、连麦，音频模块也在不断强化：美声、升降调、变声、混音等，弱网优化模块也颇有建树：码率自适应、网络主动探测、动态帧率等。</string>
    <string name="ksyun_introduction_4">金山云播放SDK通过首屏秒开、直播追赶等直播优化策略给直播提供一流的直播体验。</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="net_search">查找视频信息</string>

    <string name="set_setting">设置</string>


    <string name="net_scan">扫一扫</string>

    <string name="set_hwc">解码方式:</string>
    <string name="set_hard">硬解</string>
    <string name="set_soft">软解</string>
    <string name="start_vedio">播放</string>

    <string name="debugoff">Debug关</string>
    <string name="debugon">Debug开</string>
    <string name="debugchange">Debubg开关</string>
    <string name="set_ksytexture">KSYTexture</string>

    <string name="live_type">播放:</string>
    <string name="type_vod">点播</string>
    <string name="type_live">直播</string>
    <string name="type_floating">悬浮窗播放</string>
    <string name="type_media_player">系统播放器</string>
    <string name="bftime_text">BufferTime:</string>
    <string name="bfsize_text">BufferSize:</string>
    <string name="bfpreparetimeout_text">PrepareTimeout:</string>
    <string name="bfreadtimeout_text">ReadTimeout:</string>
    <string name="cache_threshold_text">缓存阈值</string>
    <string name="timeout_threshold_text">超时阈值</string>
    <string name="text_setting">设置</string>
    <string name="add_timed_text">添加字幕</string>
    <string name="show_stream_info">流信息</string>

    <string name="stream_index">StreamIndex</string>
    <string name="stream_type">StreamType</string>

</resources>
