<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/net_setting"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/setting"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_centerVertical="true"/>
    <Button
        android:id="@+id/net_history"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/history"
        android:layout_toLeftOf="@+id/net_setting"
        android:layout_centerVertical="true"/>


    <Button
        android:id="@+id/net_scan"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:text="@string/net_scan"
        android:layout_marginLeft="10dp"
        android:layout_centerVertical="true"/>

</RelativeLayout>